Api entities set up

--- a/LMS-Lexicon.Api/LMS.Api.csproj
+++ b/LMS-Lexicon.Api/LMS.Api.csproj
@@ -2,28 +2,23 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <UserSecretsId>aspnet-LMS_Lexicon-A75F57C9-9BE0-4389-8C46-D71FA5C6A679</UserSecretsId>
-    <RootNamespace>LMS_Lexicon</RootNamespace>
+    <RootNamespace>LMS_Lexicon.Api</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.9" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.10" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="5.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.10">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LMS-Lexicon.Api\LMS.Api.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Data\Migrations\" />
+    <ProjectReference Include="..\LMS.Api.Core\LMS.Api.Core.csproj" />
+    <ProjectReference Include="..\LMS.Api.Data\LMS.Api.Data.csproj" />
   </ItemGroup>
 
 </Project>
