--- a/LMS-Lexicon.Api/appsettings.json
+++ b/LMS-Lexicon.Api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LMS_LexiconApiContext": "Server=(localdb)\\mssqllocaldb;Database=LMS_LexiconApiContext-50424b3b-1cc0-476b-9d16-ac6b47538586;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
