--- a/LMS-Lexicon.Core/LMS-Lexicon.Core.csproj
+++ b/LMS-Lexicon.Core/LMS-Lexicon.Core.csproj
@@ -5,4 +5,10 @@
     <RootNamespace>LMS_Lexicon.Core</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.11" />
+  </ItemGroup>
+
 </Project>
