--- a/LMS_Lexicon.Data/LMS_Lexicon.Data.csproj
+++ b/LMS_Lexicon.Data/LMS_Lexicon.Data.csproj
@@ -6,6 +6,15 @@
 
   <ItemGroup>
     <PackageReference Include="Bogus" Version="33.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LMS-Lexicon.Core\LMS-Lexicon.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
