Just One Database

--- a/LMS-Lexicon/appsettings.json
+++ b/LMS-Lexicon/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LMS_Lexicon-A75F57C9-9BE0-4389-8C46-D71FA5C6A679;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "LMS_LexiconContext": "Server=(localdb)\\mssqllocaldb;Database=LMS_LexiconContext-4f5a7d62-6382-4e2b-95c9-117509930ae0;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LMS_Lexicon-A75F57C9-9BE0-4389-8C46-D71FA5C6A679;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
