--- a/LMS-Lexicon/appsettings.json
+++ b/LMS-Lexicon/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LMS_Lexicon-A75F57C9-9BE0-4389-8C46-D71FA5C6A679;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LMS_Lexicon-A75F57C9-9BE0-4389-8C46-D71FA5C6A679;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "LMS_LexiconContext": "Server=(localdb)\\mssqllocaldb;Database=LMS_LexiconContext-a246ccc4-3a69-44f2-a657-c9f5dc96e278;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
