--- a/LMS-Lexicon/LMS-Lexicon.csproj
+++ b/LMS-Lexicon/LMS-Lexicon.csproj
@@ -18,49 +18,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Controllers\wwwroot\css\site.css" />
-    <Content Include="Controllers\wwwroot\favicon.ico" />
-    <Content Include="Controllers\wwwroot\js\site.js" />
-    <Content Include="Controllers\wwwroot\lib\bootstrap\dist\css\bootstrap-grid.css" />
-    <Content Include="Controllers\wwwroot\lib\bootstrap\dist\css\bootstrap-grid.css.map" />
-    <Content Include="Controllers\wwwroot\lib\bootstrap\dist\css\bootstrap-grid.min.css" />
-    <Content Include="Controllers\wwwroot\lib\bootstrap\dist\css\bootstrap-grid.min.css.map" />
-    <Content Include="Controllers\wwwroot\lib\bootstrap\dist\css\bootstrap-reboot.css" />
-    <Content Include="Controllers\wwwroot\lib\bootstrap\dist\css\bootstrap-reboot.css.map" />
-    <Content Include="Controllers\wwwroot\lib\bootstrap\dist\css\bootstrap-reboot.min.css" />
-    <Content Include="Controllers\wwwroot\lib\bootstrap\dist\css\bootstrap-reboot.min.css.map" />
-    <Content Include="Controllers\wwwroot\lib\bootstrap\dist\css\bootstrap.css" />
-    <Content Include="Controllers\wwwroot\lib\bootstrap\dist\css\bootstrap.css.map" />
-    <Content Include="Controllers\wwwroot\lib\bootstrap\dist\css\bootstrap.min.css" />
-    <Content Include="Controllers\wwwroot\lib\bootstrap\dist\css\bootstrap.min.css.map" />
-    <Content Include="Controllers\wwwroot\lib\bootstrap\dist\js\bootstrap.bundle.js" />
-    <Content Include="Controllers\wwwroot\lib\bootstrap\dist\js\bootstrap.bundle.js.map" />
-    <Content Include="Controllers\wwwroot\lib\bootstrap\dist\js\bootstrap.bundle.min.js" />
-    <Content Include="Controllers\wwwroot\lib\bootstrap\dist\js\bootstrap.bundle.min.js.map" />
-    <Content Include="Controllers\wwwroot\lib\bootstrap\dist\js\bootstrap.js" />
-    <Content Include="Controllers\wwwroot\lib\bootstrap\dist\js\bootstrap.js.map" />
-    <Content Include="Controllers\wwwroot\lib\bootstrap\dist\js\bootstrap.min.js" />
-    <Content Include="Controllers\wwwroot\lib\bootstrap\dist\js\bootstrap.min.js.map" />
-    <Content Include="Controllers\wwwroot\lib\bootstrap\LICENSE" />
-    <Content Include="Controllers\wwwroot\lib\jquery-ajax-unobtrusive\dist\jquery.unobtrusive-ajax.js" />
-    <Content Include="Controllers\wwwroot\lib\jquery-ajax-unobtrusive\dist\jquery.unobtrusive-ajax.min.js" />
-    <Content Include="Controllers\wwwroot\lib\jquery-ajax-unobtrusive\LICENSE.txt" />
-    <Content Include="Controllers\wwwroot\lib\jquery-ajax-unobtrusive\README.md" />
-    <Content Include="Controllers\wwwroot\lib\jquery-validation-unobtrusive\jquery.validate.unobtrusive.js" />
-    <Content Include="Controllers\wwwroot\lib\jquery-validation-unobtrusive\jquery.validate.unobtrusive.min.js" />
-    <Content Include="Controllers\wwwroot\lib\jquery-validation-unobtrusive\LICENSE.txt" />
-    <Content Include="Controllers\wwwroot\lib\jquery-validation\dist\additional-methods.js" />
-    <Content Include="Controllers\wwwroot\lib\jquery-validation\dist\additional-methods.min.js" />
-    <Content Include="Controllers\wwwroot\lib\jquery-validation\dist\jquery.validate.js" />
-    <Content Include="Controllers\wwwroot\lib\jquery-validation\dist\jquery.validate.min.js" />
-    <Content Include="Controllers\wwwroot\lib\jquery-validation\LICENSE.md" />
-    <Content Include="Controllers\wwwroot\lib\jquery\dist\jquery.js" />
-    <Content Include="Controllers\wwwroot\lib\jquery\dist\jquery.min.js" />
-    <Content Include="Controllers\wwwroot\lib\jquery\dist\jquery.min.map" />
-    <Content Include="Controllers\wwwroot\lib\jquery\LICENSE.txt" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.1.0" />
     <PackageReference Include="FontAwesome" Version="4.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.11" />
@@ -101,6 +58,49 @@
 
   <ItemGroup>
     <Folder Include="Resources\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\css\site.css" />
+    <None Include="wwwroot\favicon.ico" />
+    <None Include="wwwroot\js\site.js" />
+    <None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-grid.css" />
+    <None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-grid.css.map" />
+    <None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-grid.min.css" />
+    <None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-grid.min.css.map" />
+    <None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-reboot.css" />
+    <None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-reboot.css.map" />
+    <None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-reboot.min.css" />
+    <None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-reboot.min.css.map" />
+    <None Include="wwwroot\lib\bootstrap\dist\css\bootstrap.css" />
+    <None Include="wwwroot\lib\bootstrap\dist\css\bootstrap.css.map" />
+    <None Include="wwwroot\lib\bootstrap\dist\css\bootstrap.min.css" />
+    <None Include="wwwroot\lib\bootstrap\dist\css\bootstrap.min.css.map" />
+    <None Include="wwwroot\lib\bootstrap\dist\js\bootstrap.bundle.js" />
+    <None Include="wwwroot\lib\bootstrap\dist\js\bootstrap.bundle.js.map" />
+    <None Include="wwwroot\lib\bootstrap\dist\js\bootstrap.bundle.min.js" />
+    <None Include="wwwroot\lib\bootstrap\dist\js\bootstrap.bundle.min.js.map" />
+    <None Include="wwwroot\lib\bootstrap\dist\js\bootstrap.js" />
+    <None Include="wwwroot\lib\bootstrap\dist\js\bootstrap.js.map" />
+    <None Include="wwwroot\lib\bootstrap\dist\js\bootstrap.min.js" />
+    <None Include="wwwroot\lib\bootstrap\dist\js\bootstrap.min.js.map" />
+    <None Include="wwwroot\lib\bootstrap\LICENSE" />
+    <None Include="wwwroot\lib\jquery-ajax-unobtrusive\dist\jquery.unobtrusive-ajax.js" />
+    <None Include="wwwroot\lib\jquery-ajax-unobtrusive\dist\jquery.unobtrusive-ajax.min.js" />
+    <None Include="wwwroot\lib\jquery-ajax-unobtrusive\LICENSE.txt" />
+    <None Include="wwwroot\lib\jquery-ajax-unobtrusive\README.md" />
+    <None Include="wwwroot\lib\jquery-validation-unobtrusive\jquery.validate.unobtrusive.js" />
+    <None Include="wwwroot\lib\jquery-validation-unobtrusive\jquery.validate.unobtrusive.min.js" />
+    <None Include="wwwroot\lib\jquery-validation-unobtrusive\LICENSE.txt" />
+    <None Include="wwwroot\lib\jquery-validation\dist\additional-methods.js" />
+    <None Include="wwwroot\lib\jquery-validation\dist\additional-methods.min.js" />
+    <None Include="wwwroot\lib\jquery-validation\dist\jquery.validate.js" />
+    <None Include="wwwroot\lib\jquery-validation\dist\jquery.validate.min.js" />
+    <None Include="wwwroot\lib\jquery-validation\LICENSE.md" />
+    <None Include="wwwroot\lib\jquery\dist\jquery.js" />
+    <None Include="wwwroot\lib\jquery\dist\jquery.min.js" />
+    <None Include="wwwroot\lib\jquery\dist\jquery.min.map" />
+    <None Include="wwwroot\lib\jquery\LICENSE.txt" />
   </ItemGroup>
 
 </Project>
